# cyclops

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .pylintrc  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  MANIFEST.in  MLproject  README.md  README.rst  analysis.py  analysis_demo.ipynb  codebase_ops.py  codecov.yml  conda.yaml  config.py  dataset.py  draw_sys_design.py  environment.yml  evaluate.py  final_4_hospitals_data_delirium.csv  gemini_analysis.conf  index.html  luigi-state.pickle  main.py  mlflow_report.ipynb  model.py  mypy.ini  pipeline.py  pipeline_simulation.py  predict.py  process_data.py  pyproject.toml  registry.py  (+8 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code_checks.yml  docker.yml  docs.yaml  docs.yml  docs_build.yml  docs_deploy.yml  docs_release.yml  integration_tests.yml  package.yml  publish.yml  static_code_analysis.yml  unit_tests.yml  unittest.yml
analysis/: analysis.py
api/: .buildinfo  api.html  contributing.html  developing.html  evaluation.html  genindex.html  index.html  installation.html  intro.html  model_report.html  monitoring.html  objects.inv  page.html  py-modindex.html  search.html  searchindex.js  tutorials.html  tutorials_monitor.html  tutorials_use_cases.html  user_guide.html
api/_modules/: index.html
api/_sources/: api.rst  contributing.rst  developing.rst  evaluation.rst.txt  index.rst  index.rst.txt  installation.rst  intro.rst.txt  model_report.rst.txt  tutorials.rst.txt  user_guide.rst
api/examples/: heart_failure_report_periodic.html  metrics.html  metrics.ipynb  report.html  report.ipynb
apps/: visualizer.py
apps/interface/: __init__.py  analyze_page.py  app.py  app_query.py  component_utils.py  consts.py  css.py  query_page.py
apps/landing/: run.py
apps/visualizer/: __init__.py  css.py  run.py
assets/css/: styles.bd9f4b2a.css
assets/js/: 01a85c17.da9600a7.js  09cc0fa9.d1447af3.js  0e384e19.31cbee51.js  1032eb88.21facef8.js  17896441.47c6bc16.js  1cd7c442.f735fc16.js  1f391b9e.ca9241df.js  2611d45e.8da26771.js  393be207.d6293ad3.js  3e9d370c.29f4916b.js  4318ca4d.af1e8dc8.js  50189a3c.9d0c729b.js  5157afc5.c0cccd16.js  52fb8db5.30e2b66a.js  59d1d05d.0341b085.js  59d1d05d.3b10afa6.js  59d1d05d.481fb98e.js  59d1d05d.98f3cfec.js  5a2b9883.a86123a7.js  5e95c892.f3450f11.js  623bf421.3250c912.js  677.255755f5.js  6875c492.f0b05a41.js  72bee0c1.b6c646b2.js  772.49ef88f2.js  814f3328.76d67795.js  814f3328.7a812e1e.js  814f3328.994c2959.js  829838f0.5053197f.js  84827d48.b2ca189d.js  91ff21cd.0ce108b1.js  91ff21cd.4ed48df3.js  91ff21cd.515432ee.js  91ff21cd.c55a46cf.js  91ff21cd.fc37e053.js  935f2afb.c454fda8.js  9e4087bc.78d2f49b.js  9f179204.8d399381.js  a6aa9e1f.32d24c61.js  a7bd4aaa.408f404b.js  (+43 more)
benchmarks/mimiciv/: discharge_prediction.ipynb  icu_mortality_prediction.ipynb
blog/: atom.xml  index.html  rss.xml
blog/CyclOps-0.2.0-release/: index.html
blog/archive/: index.html
blog/cyclops-0.2.0-release/: index.html
blog/cyclops-alpha-release/: index.html
blog/tags/: index.html
config/: config.py  gemini.cfg  gemini_data.cfg  gemini_luigi.cfg
configs/default/: data.yaml  model.yaml
configs/eicu_crd/: processor.yaml  query.yaml
configs/gemini/: analysis.yaml  data.yaml  query.yaml  workflow.yaml
configs/gemini_omop/: query.yaml
configs/mimic/: data.yaml  model.yaml  query.yaml  workflow.yaml
configs/mimiciii/: query.yaml
configs/mimiciv/: model.yaml  query.yaml  workflow.yaml
cyclops/: __init__.py  config.py  constants.py  data_pipeline.py  feature_handler.py  orm.py  plotter.py  processor.py  querier.py  queries.py  query_gemini.py  query_mimic.py  query_utils.py
cyclops/core/: extract.py
cyclops/data/: __init__.py  aggregate.py  clean.py  constants.py  diagnoses.py  impute.py  loader.py  preprocess.py  slicer.py  string_ops.py  transforms.py  utils.py
cyclops/datasets/: __init__.py  loader.py  preprocess.py  slice.py  slicer.py  slicing.py  transforms.py  utils.py
cyclops/evaluate/: __init__.py  evaluator.py  fairness.py  slicing.py  utils.py
cyclops/models/: __init__.py  calibrator.py  catalog.py  constants.py  data.py  plotter.py  predictor.py  torch_utils.py  util.py  utils.py  wrapper.py
cyclops/monitor/: __init__.py  clinical_applicator.py  dataframe_mapping.py  detector.py  (+12 more)
datapipeline/: analysis.py  config.py  delirium.conf  delirium.config  extraction.py  process_data.py
deploy/: README.md  bentofile.yaml  deployment.yaml  service.py
docs/: Makefile  draw_sys_design.py  requirements.txt
drift_detection/: DRIFTDETECTION.md  __init__.py  drift_detection_pipeline.py  experiments.py  gemini_drift_detection.py  legacy_utils.py  run_detection_pipeline.py  run_drift_detection.py  shift_constants.py  shift_delirium_utils.py  shift_detection_pipeline.py  shift_detector.py  shift_experiments.py  shift_explainer.py  shift_fsd.py  shift_models.py  shift_plot_utils.py  shift_reductor.py  shift_tester.py  shift_utils.py  summary_tables.py  temporal_drift_detection.py
feature_repo/: example.py  feature_store.yaml  test.py
markdown-page/: index.html
models/: __init__.py  catalog.py  constants.py  data.py  dataset.py  metrics.py  mlp.py  plotter.py  predictor.py  utils.py  wrapper.py
nbs/: explore_huggingface_datasets.ipynb  test_omop.ipynb
sample_code/: accessDB_scratch.py  acessDB_demo.ipynb  alibi_demo.ipynb  analysis_demo-with-noise.ipynb  analysis_demo.ipynb  config.py  data_extraction.ipynb  data_layer.ipynb  delirium-tensorflow-draft.ipynb  delirium.config  delirium.ipynb  extraction.py  feature_handler.ipynb  labs.ipynb  mimic.ipynb  mlflow_demo.ipynb  mlflow_training.ipynb  noise-injection.ipynb  playground.ipynb  process_data.py  smh_drift_playground.ipynb  training_demo.ipynb  vitals.ipynb
tasks/: analysis.py  dataset.py  model.py  predict.py  registry.py  train.py
tests/: conftest.py
use_cases/: __init__.py  constants.py  cxr_classification.ipynb  mortality_prediction.ipynb  process.py  util.py
(+1423 files in other folders)
